added jqueryui files

--- a/FilmModel/WebContent/index.html
+++ b/FilmModel/WebContent/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<script src="scripts/jquery.js"></script>
+<script src="external/jquery/jquery.js"></script>
 <script src="scripts/myjquery.js"></script>
 <title>Film Data</title>
 </head>
