--- a/FilmModel/WebContent/index.html
+++ b/FilmModel/WebContent/index.html
@@ -5,6 +5,7 @@
 <script src="external/jquery/jquery.js"></script>
 <script src="scripts/myjquery.js"></script>
 <script src="scripts/jquery-ui.js"></script>
+<script src="scripts/ajax-utils.js"></script>
 <link rel="stylesheet" href="css/jquery-ui.css"/>
 <link rel="stylesheet" href="css/jquery-ui.theme.css"/>
 <link rel="stylesheet" href="css/my-css.css"/>
